Centered demo action canvas

--- a/demo_action/index.html
+++ b/demo_action/index.html
@@ -8,7 +8,7 @@
 		<div id="userlist"></div>
 	</div>
 	<div id="timer" style="width:100%; text-align:center; padding:10; font-size:1.2em; font-weight:400"></div>
-    <canvas id="canvas" width="600" height ="400" style="border:1px solid black;"></canvas>
+    <canvas id="canvas" width="600" height ="400" style="border:1px solid black; margin-left: auto; margin-right: auto; display: block;"></canvas>
 </body>
 </html>
 <script src="js/qrcodejs/qrcode.min.js"></script>
